--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,11 +44,4 @@ set -g pane-border-style fg=green
 
 set-option -g history-limit 1000000
 
-# active pane
-set -g window-active-style 'fg=terminal,bg=terminal'
-set -g window-style 'fg=terminal,bg=colour15' # white background
-
-set-window-option -g window-status-current-style bg=white
-
-# set -g base-index 1
-# setw -g pane-base-index 1
+# set-window-option -g window-status-current-style bg=white
